# pencerahandatanglah

./: CMakeLists.txt  README.md  main.qml  pencerahandatanglah.qmlproject  qmlmodules  qmlmqttclient.cpp  qmlmqttclient.h
content/: App.qml  CMakeLists.txt  MainScreen.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/pencerahandatanglah/: CMakeLists.txt  qmldir
imports/pencerahandatanglah/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
